# synapse-instant-document-insight

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  chain.py  config.py  docker-compose.yml  ingest.py  pyproject.toml  requirements.txt  test_reranker.py
.github/workflows/: ci.yml  deploy-hf.yml  release.yml
scripts/: init.sql
scripts/eval/: README.md  eval_harness.py  sample_predictions.jsonl
src/: __init__.py
src/agent/: orchestrator.py  state.py  tools.py
src/api/: __init__.py  auth.py  dependencies.py  ingestion_contract.py  ingestion_jobs.py  main.py  rate_limiter.py  schemas.py  session.py  usage.py
src/api/routes/: __init__.py  documents.py  insights.py  keys.py  query.py
src/core/: __init__.py  config.py  exceptions.py  logger.py
src/db/: __init__.py  connection.py  models.py
src/ingestion/: __init__.py  chunkers.py  file_storage.py  loaders.py  metadata_filters.py  pgvector_store.py  vectorstore.py
src/rag/: __init__.py  chain.py  chat_history.py  contextualize.py  grounding.py  hybrid_search.py  prompts.py  query_rewrite.py  reranker.py  retrieval_utils.py
tests/: __init__.py  conftest.py  test_agent_orchestrator.py  test_agent_schemas.py  test_api_ingestion_contract.py  test_core.py  test_file_storage.py  test_grounding.py  test_ingestion.py  test_loaders_ocr.py  test_metadata_filters.py  test_rag.py  test_retrieval_utils.py  test_sources.py
